# pylabber

./: .babelrc  .coverage  .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  Mutual Information.ipynb  Pipfile  Procfile  README.md  check.dcm  docker-compose.debug.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  start_labbing.py  subjects.xlsx  subjects_script.ipynb  tmp.dcm  tox.ini  webpack-stats.json  webpack.config.bakk.js  webpack.config.js
.circleci/: config.yml
.ipynb_checkpoints/: Mutual Information-checkpoint.ipynb
accounts/: __init__.py  admin.py  backends.py  choices.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
bokeh_integration/: apps.py
config/: index.js
dicom/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  settings.py  signals.py  tables.py  urls.py  views.py
external_tables/: admin.py  apps.py
mri/: __init__.py  apps.py  signals.py
mutual_information/: apps.py  models.py
pylabber/: __init__.py  celery.py  docker.env  settings.py  storage_backends.py  test_settings.py  urls.py  utils.py  wsgi.py
questionnaires/: admin.py  context_processors.py  mixins.py  urls.py  views.py
requirements/: common.txt  dev.txt  requirements.txt
research/: Summary.ipynb  __init__.py  admin.py  apps.py  brain_recognition.py  context_processors.py  filters.py  forms.py  mixins.py  models.py  signals.py  tables.py  urls.py  utils.py  views.py
studies/: admin.py  urls.py  views.py
(+470 files in other folders)
