[tool.poetry]
name = "pylabber"
version = "0.1.0"
description = "A Django project to support neuroscientific research"

license = "MIT"

authors = [
    "Zvi Baratz <z.baratz@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/ZviBaratz/pylabber"
# homepage = "https://github.com/sdispater/poetry"

keywords = ['research', 'neuroscience', 'django']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
django_extensions = "^2.1"
django-crispy-forms = "^1.7"
django-tables2 = "^2.0"
django-filters = "^0.2.1"
django-celery-beat = "^1.4"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8"
Pillow = "^6.0"
django_dicom = {path = "../django_dicom/"}
django_smb = {path = "../django_smb/"}
django = "^2.2"
tqdm = "^4.31"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
ipython = "^7.4"
black = {version = "*", allows-prereleases = true}
flake8 = "^3.7"
sphinx = "^2.0"
faker = "^1.0"
factory-boy = "^2.11"
coverage = "^4.5"
